feat: add jwt token
