# docs/swagger.json
@@ -685,7 +685,7 @@
                     "200": {
                         "description": "User information",
                         "schema": {
-                            "$ref": "#/definitions/dto.User"
+                            "$ref": "#/definitions/dto.UserResponse"
                         }
                     },
                     "400": {
@@ -1102,6 +1102,7 @@
                 "email",
                 "first_name",
                 "gender",
+                "info_type",
                 "last_name",
                 "password",
                 "phone_number"
@@ -1204,6 +1205,9 @@
                     "type": "string"
                 },
                 "info_type": {
+                    "type": "string"
+                },
+                "jwt": {
                     "type": "string"
                 },
                 "last_name": {
